# little_clock

./: README.md
little_clock/: CMakeLists.txt  sdkconfig-ok
little_clock/components/adc_key/: CMakeLists.txt  adc_key.c  adc_key.h
little_clock/components/cJSON/: CMakeLists.txt
little_clock/components/wifi/: CMakeLists.txt  wifi_station.c  wifi_station.h
little_clock/main/: CMakeLists.txt  bg_pic.h  display_app.c  display_app.h  get_weather.c  get_weather.h  main.c  main.h
